--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
     <footer>
         <script src="js/main.js"></script>
+        <script src="js/main2.js"></script>
+        <script src="js/main3.js"></script>
     </footer>
 </body>
 </html>
