--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <main>
     <div class="container">
         <div class="main-heading">
-            <h1>¡Esto es un Header genial!</h1>
+            <h1>¡Estructuras condicionales y repetitivas!</h1>
         </div>
     </div>
     
     <div class="container">
         <div class="main-subheading">
-            <h2>Acá hay una aclaración</h2>
+            <h2>Trabajo numero 6</h2>
         </div>
     </div>
     
